	(PR#13724)  This also happened for DF[["foo"]] <- value.

    o	R CMD INSTALL no longer gives a spurious warning about old R
	versions ignoring multiple dependencies, if the conditions are
	known to be satisfied.

    o	The test for setting dim() allowed a value with two or more
	NAs to be set on a 0-length object.  (PR#13729)  Also, it
	allowed an even number of negative values.




		CHANGES IN R VERSION 2.9.0


NEW FEATURES

    o	Package 'Matrix' is now a recommended package contained in the
	basic R distribution.  It provides S4 classes and methods for
	dense and sparse matrices, often by using the numerical
	libraries Lapack and from the SuiteSparse collection CHOLMOD,
	CSparse, and SPQR among others.

    o	pdf() and postscript() gain a 'useKerning' argument to place
	strings using kerning (which had previously been ignored in
	display but not in strwidth), based in part on an idea and
	code from Ei-ji Nakama. The default is TRUE.

	Kerning involving spaces is now ignored (it was previously
	only used in the computation of string widths).

    o	seq.default() and seq.int() ensure that the result is within the
	interval [from, to] even when the last value would previously
	have been slightly out of range because of the allowance for
	rounding error in computing the number of elements.

    o	boxplot() gains a simple 'matrix' method, enabling boxplot(mat)
	instead of boxplot(data.frame(mat)).

    o	zip.file.extract() gains an optional 'dir' argument (but use
	unzip() instead).

    o	source() with 'encoding' specified (and not as "unknown") marks
	the encoding of character strings in Latin-1 and UTF-8
	locales.

    o	parse(text=z) now marks the encoding of character strings in
	Latin-1 and UTF-8 locales if 'z' is of known encoding (that is
	all elements are either ASCII or marked as Latin-1 or UTF-8).

    o	sprintf() does stricter error checking on input formats to
	avoid passing invalid formats to the OS (which have a tendency